--- a/src/assets/scss/abstracts/_mixins.scss
+++ b/src/assets/scss/abstracts/_mixins.scss
@@ -6,52 +6,60 @@
 	flex-direction: $fd;
 }
 
-@mixin pseudo ($t: null, $b: null, $l: null, $r: null) {
-	content: '';
+@mixin pseudo ($content: '') {
+	content: $content;
 	display: block;
-	position: absolute;
-	top: #{$t}px;
-	bottom: #{$b}px;
-	left: #{$l}px;
-	right: #{$r}px;
-	}
+}
+
 @mixin box-size ($w: null, $h: null) {
 	width: $w;
 	height: $h;
 }
-@mixin pad-mar ($pt: null, $pr: null, $pb: null, $pl: null, $mt: null, $mr: null, $mb: null, $ml: null) {
-	padding-top: #{$pt}px;
-	padding-right: #{$pr}px;
-	padding-bottom: #{$pb}px;
-	padding-left: #{$pl}px;
-	margin-top: #{$mt}px;
-	margin-right: #{$mr}px;
-	margin-bottom: #{$mb}px;
-	margin-left: #{$ml}px;
+
+@mixin pad ($pt: null, $pr: null, $pb: null, $pl: null) {
+	padding-top: $pt;
+	padding-right: $pr;
+	padding-bottom: $pb;
+	padding-left: $pl;
 }
-@mixin  pos ($t: null, $b: null, $l: null, $r: null) {
+
+@mixin mar ($mt: null, $mr: null, $mb: null, $ml: null) {
+	margin-top: $mt;
+	margin-right: $mr;
+	margin-bottom: $mb;
+	margin-left: $ml;
+}
+
+@mixin pos-px ($t: null, $b: null, $l: null, $r: null) {
 	top: #{$t}px;
 	bottom: #{$b}px;
 	left: #{$l}px;
 	right: #{$r}px;
 }
+
+@mixin pos ($t: null, $b: null, $l: null, $r: null) {
+	top: $t;
+	bottom: $b;
+	left: $l;
+	right: $r;
+}
+
 @mixin pos-abs ($t: null, $b: null, $l: null, $r: null) {
 	position: absolute;
 	top: $t;
 	bottom: $b;
 	left: $l;
 	right: $r;
-	transform: translateX(-50%);
-
 }
 
 @mixin pos-fix ($t: null, $b: null, $l: null, $r: null) {
 	position: fixed;
-	top: #{$t}px;
-	bottom: #{$b}px;
-	left: #{$l}px;
-	right: #{$r}px;
-	}
+	top: $t;
+	bottom: $b;
+	left: $l;
+	right: $r;
+}
+
 @mixin font ($fs: 1rem, $lh: 2.5em, $ls: null, $text-trans: null, $fw: null) {
 	font-size: $fs;
 	line-height: $lh;
@@ -59,41 +67,67 @@
 	text-transform: $text-trans;
 	font-weight: $fw;
 }
-@mixin  background ($img) {
+
+@mixin background ($img) {
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: cover;
 	background-image: $img;
-	}
-	@mixin border-radius($radius) {
-		border-radius: #{$radius}px;
-		-webkit-border-radius: #{$radius}px;
-		-moz-border-radius: #{$radius}px;
-		-ms-border-radius: #{$radius}px;
-		-o-border-radius: #{$radius}px;
-	}
-	@mixin border-radii($topleft, $topright, $bottomright, $bottomleft) {
-		border-top-left-radius: $topleft;
-		border-top-right-radius: $topright;
-		border-bottom-right-radius: $bottomright;
-		border-bottom-left-radius: $bottomleft;
-		-webkit-border-top-left-radius: $topleft;
-		-webkit-border-top-right-radius: $topright;
-		-webkit-border-bottom-right-radius: $bottomright;
-		-webkit-border-bottom-left-radius: $bottomleft;
-		-moz-border-radius-topleft: $topleft;
-		-moz-border-radius-topright: $topright;
-		-moz-border-radius-bottomright: $bottomright;
-		-moz-border-radius-bottomleft: $bottomleft;
-	}
-	@mixin border-rdius($tl:null, $tr:null, $br:null, $bl:null, $b: null, $bt: null, $bc: null) {
-		border: $b $bt $bc;
-		border-top-left-radius: $tl;
-		border-top-right-radius: $tr;
-		border-bottom-right-radius: $br;
-		border-bottom-left-radius: $bl;
-	 }
-	 
+}
+
+@mixin border-radius-px ($radius) {
+	border-radius: #{$radius}px;
+	-webkit-border-radius: #{$radius}px;
+	-moz-border-radius: #{$radius}px;
+	-ms-border-radius: #{$radius}px;
+	-o-border-radius: #{$radius}px;
+}
+
+@mixin border-radius ($radius) {
+	border-radius: $radius;
+	-webkit-border-radius: $radius;
+	-moz-border-radius: $radius;
+	-ms-border-radius: $radius;
+	-o-border-radius: $radius;
+}
+
+@mixin border-radius-side ($topleft, $topright, $bottomright, $bottomleft) {
+	border-top-left-radius: $topleft;
+	border-top-right-radius: $topright;
+	border-bottom-right-radius: $bottomright;
+	border-bottom-left-radius: $bottomleft;
+	-webkit-border-top-left-radius: $topleft;
+	-webkit-border-top-right-radius: $topright;
+	-webkit-border-bottom-right-radius: $bottomright;
+	-webkit-border-bottom-left-radius: $bottomleft;
+	-moz-border-radius-topleft: $topleft;
+	-moz-border-radius-topright: $topright;
+	-moz-border-radius-bottomright: $bottomright;
+	-moz-border-radius-bottomleft: $bottomleft;
+	-ms-border-radius-topleft: $topleft;
+	-ms-border-radius-topright: $topright;
+	-ms-border-radius-bottomright: $bottomright;
+	-ms-border-radius-bottomleft: $bottomleft;
+	-o-border-radius-topleft: $topleft;
+	-o-border-radius-topright: $topright;
+	-o-border-radius-bottomright: $bottomright;
+	-o-border-radius-bottomleft: $bottomleft;
+}
+
+@mixin border($bw: null, $bs: solid, $bc: null) {
+	border-width: $bw;
+	border-style: $bs;
+	border-color: $bc;
+}
+
+@mixin transition($transition-property, $transition-time, $method) {
+	-webkit-transition: $transition-property $transition-time $method;
+	-moz-transition: $transition-property $transition-time $method;
+	-ms-transition: $transition-property $transition-time $method;
+	-o-transition: $transition-property $transition-time $method;
+	transition: $transition-property $transition-time $method;
+}
+
 // @mixin font-source-sans($size: false, $colour: false, $weight: false, $lh: false) {
 // 	font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif;
 
