--- a/src/assets/scss/abstracts/_variables.scss
+++ b/src/assets/scss/abstracts/_variables.scss
@@ -1,2 +1,10 @@
 $bg-header-color: #ffd68f;
 $bg-burger-color: #c7c5c4;
+$bg-cards-color: #f6edde;
+$bg-main-color: #fff;
+$text-cards-color: #f2612d;
+$text-dark-color: #1e1e1e;
+$bg-about-color: #158371;
+$bg-footer-color: #f4ad39;
+$text-footer-color: #6d450c;
+$bg-footer-bottom-color: #6e2c1e;
