--- a/src/assets/scss/components/_social.scss
+++ b/src/assets/scss/components/_social.scss
@@ -1,44 +1,30 @@
+.social {
+	&__list {
+		@include flex (center, center);
+	}
 
-
-
-
-.social__list {
-	display: flex;
-	align-items: center;
+&__item {
+	@include flex (center, center);
+	@include box-size (38px, 38px);
+	@include border-radius (50%);
+	background-color: $bg-main-color;
+	&:hover {
+		transform: scale(1.2);
+		-webkit-transform: scale(1.2);
+		-moz-transform: scale(1.2);
+		-ms-transform: scale(1.2);
+		-o-transform: scale(1.2);
+	}
+	&--footer {
+		background-color: transparent;
+	}
 }
 
-.social__item {
-	width: 38px;
-	/* 38px */
-	height: 38px;
-	/* 38px */
+&__item + &__item {
+	@include mar (0, 0, 0, 8px);
 
-	display: flex;
-	justify-content: center;
-	align-items: center;
-
-	background-color: #fff;
-
-	border-radius: 50%;
-	-webkit-border-radius: 50%;
-	-moz-border-radius: 50%;
-	-ms-border-radius: 50%;
-	-o-border-radius: 50%;
+}
 }
 
-.social__item:hover {
-	transform: scale(1.2);
-	-webkit-transform: scale(1.2);
-	-moz-transform: scale(1.2);
-	-ms-transform: scale(1.2);
-	-o-transform: scale(1.2);
-}
 
-.social__item + .social__item {
-	margin-left: 8px;
-	/* 8px */
-}
 
-.social__item--footer {
-	background-color: transparent;
-}
