--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -80,7 +80,7 @@
 
 		&__burger-line {
 			@include box-size (35px, 2px);
-			background-color: $bg-burger-color;
+			background-color: $burger-color;
 			position: relative;
 			display: block;
 			@include transition (all, 0.5s, ease);
