--- a/src/assets/scss/components/_personal.scss
+++ b/src/assets/scss/components/_personal.scss
@@ -4,11 +4,7 @@
 	}
 
 	&__icon:hover {
-		transform: scale(1.2);
-		-webkit-transform: scale(1.2);
-		-moz-transform: scale(1.2);
-		-ms-transform: scale(1.2);
-		-o-transform: scale(1.2);
+		@include transform (scale(1.2));
 	}
 
 	&__item+&__item {
@@ -29,6 +25,5 @@
 		color: #000;
 
 		background-color: $bg-main-color;
-
 	}
 }
