--- a/src/assets/scss/components/_social.scss
+++ b/src/assets/scss/components/_social.scss
@@ -9,12 +9,8 @@
 	@include border-radius (50%);
 	background-color: $bg-main-color;
 	&:hover {
-		transform: scale(1.2);
-		-webkit-transform: scale(1.2);
-		-moz-transform: scale(1.2);
-		-ms-transform: scale(1.2);
-		-o-transform: scale(1.2);
-	}
+		@include transform (scale(1.2));
+		}
 	&--footer {
 		background-color: transparent;
 	}
