--- a/src/assets/scss/components/_menu.scss
+++ b/src/assets/scss/components/_menu.scss
@@ -9,15 +9,11 @@
 	
 	&__item:hover {
 		@include transition (all, .2s, ease-in-out);
-		transform: scale(1.3);
-		-webkit-transform: scale(1.3);
-		-moz-transform: scale(1.3);
-		-ms-transform: scale(1.3);
-		-o-transform: scale(1.3);
+		@include transform (scale(1.3));
 		}
 	
 	&__link {
-		@include font ($fs: 1rem, $lh: 2.5em, $ls: -0.02em, $text-trans: uppercase, $fw: 700);
+		@include font (1rem, 2.5em, -0.02em, uppercase, 700);
 		position: relative;
 		&::after {
 			@include pseudo;
